--- a/template/employee/employees.html
+++ b/template/employee/employees.html
@@ -48,7 +48,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form class="needs-validation" id="frmAddEmployee" action="" method="post">
+        <form id="frmAddEmployee" action="" method="post">
           {% csrf_token %}
           <div class="form-group">
             <label for="name">Nombre Completo</label>
@@ -125,4 +125,3 @@
   </div>
 </div>
 {% endblock %}
-modalEditEmployee
